--- a/src/assets/sass/lbd/mixins/_chartist.scss
+++ b/src/assets/sass/lbd/mixins/_chartist.scss
@@ -80,6 +80,7 @@ $ct-series-colors: (
   $social-twitter,
   $social-pinterest,
   $social-behance,
+  $new-sfco,
   #6188e2,
   #a748ca
 ) !default;
