--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,15 +1,48 @@
-<div class="sidebar">
+<div class="sidebar-wrapper" style="overflow: hidden">
     <div class="logo center-logo">
-        <div class="logo-img">
-            <img src="../../assets/logo.png"/>
-        </div>
-        
+        <a href="" class="simple-text" target="_blank">
+            <div class="center-logo">
+                <img src="../../assets/logo.png" />
+            </div>
+        </a>
     </div>
-    <ul class="nav responsive-nav">
-        <div class="d-flex flex-column w-100" >
-          
+    <ul class="nav responsive-nav" style="overflow: hidden">
+        <div class="d-flex flex-column w-100">
+            <li class="nav-item" routerLinkActive="active" *ngFor="let menuItem of menuItems">
+                <a [routerLink]="[menuItem.path]" class="nav-link">
+                    <!-- <i class="{{menuItem.icon}} icon-sidebar"></i> -->
+                    <p class="text-center"> {{menuItem.title}}</p>
+                </a>
+
+            </li>
         </div>
     </ul>
+
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item"  *ngFor="let menuItem of menuItems; let i = index;">
+            <h2 class="accordion-header" id="menuItem{{i}}">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"{{i}}
+                    aria-expanded="true" aria-controls="collapseOne">
+                    {{menuItem.title}}
+                </button>
+            </h2>
+            <div id="collapse{{i}}" class="accordion-collapse collapse show" aria-labelledby="menuItemi"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+                    plugin adds the appropriate classes that we use to style each element. These classes control the
+                    overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of
+                    this with custom CSS or overriding our default variables. It's also worth noting that just about any
+                    HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
 </div>
+
 
 
