--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -62,12 +62,12 @@
   margin-bottom: 30px;
 }
 .sidebar .nav > li.active-pro {
-  position: absolute;
+  position: relative;
   width: 100%;
   bottom: 10px;
 }
 .sidebar .nav > li.active-pro a {
-  background: rgba(255, 255, 255, 0.14);
+  background: rgb(243, 236, 236);
   opacity: 1;
   color: #ffffff;
 }
