--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -7,7 +7,7 @@
     width: 260px;
     display: block;
     z-index: 5;
-    color: #fff;
+    color: black;
     font-weight: 200;
     background-size: cover;
     background-position: center center;
@@ -243,6 +243,9 @@
     }
     &[data-color="purple"]:after{
         @include icon-gradient($new-purple, $purple-color-bottom);
+    }
+    &[data-color="sfco"]:after{
+        @include icon-gradient($new-sfco, $sfco-color-bottom);
     }
 }
 
