--- a/src/app/sidebar-test/sidebar-test.component.css
+++ b/src/app/sidebar-test/sidebar-test.component.css
@@ -10,7 +10,8 @@
 }
 
 .sidenav .mat-toolbar {
-  background:  #3f458a;;
+  background:  #3f458a;
+  text-align: center;
 }
 
 .mat-toolbar.mat-primary {
@@ -22,25 +23,35 @@
 .example-accordion {
   display: block;
   max-width: 500px;
+  text-align: center;
+  color: white;
 }
 
 .example-accordion-item {
   display: inline-block;
-  border: solid 1px #ccc;
+  border: none;
+  text-align: center !important;
 }
 
 .example-accordion-item + .example-accordion-item {
   border-top: none;
+  text-align: center;
 }
 
 .example-accordion-item-header {
   display: flex;
   align-content: center;
-  justify-content: space-between;
+  text-align: center;
   color: white;
 }
 
 .example-accordion-item-description {
   font-size: 0.85em;
   color: white;
+  text-align: center;
 }
+
+.cambioColor:hover {color:white !important;
+ 
+}
+
