--- a/src/assets/css/light-bootstrap-dashboard.css
+++ b/src/assets/css/light-bootstrap-dashboard.css
@@ -224,6 +224,7 @@ body,
 .wrapper {
   min-height: 100vh;
   position: relative;
+  width: auto;
 }
 
 a.children-sidebar:hover {
@@ -299,6 +300,7 @@ input:focus {
   position:relative;
   top: 0px;
   height: 100vh;
+  width: auto;
 }
 
 .sidebar,
@@ -671,16 +673,13 @@ input:focus {
 
 .main-panel {
   background: white (203, 203, 210, 0.15);
-  position: absolute;
+  position: static;
   z-index: 2;
   margin-left: 200px ;
-  width: calc(100% - 260px);
-  min-height: 100%;
+  width: calc(100% - 360px);
+  min-height: 70%;
   overflow: auto;
-  width: 1486px;
-  
-
-  
+  width: auto;  
 }
 .main-panel .main-content {
   padding: 30px 15px;
