--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,14 +1,13 @@
 <div class="wrapper">
     <div class="" data-color="" >
-        
         <app-sidebar-test></app-sidebar-test>
     </div>
   
     <div class="main-panel" >
         <router-outlet></router-outlet>
-        <div *ngIf="isMap('maps')">
+        <!-- <div *ngIf="isMap('maps')"> -->
             
-        </div>
+        <!-- </div> -->
     </div>
   
 </div>
