--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,13 +25,17 @@
                     <label class="form-label text-white" for="form2Example27">Password</label>
                   </div>
 
-                  <div class="pt-1 mb-4">
+                  
+                  <a href="/register" id = "href" class="text-white">¿Aún no te Has registrado? Registrate</a>
+                  
+                  
+
+                  <div class="pt-1 mb-4 mt-4">
+                    
                     <button (click)="(entrar())" class="btn btn-light btn-lg btn-block" type="submit"><i
                         class="fas fa-sign-in-alt"></i>Login</button>
                   </div>
-                  <!-- <div class="pt-1 mb-4">
-                    <button (click)="(registro())" class="btn btn-light btn-lg btn-block" type="button">Registrarse</button>
-                  </div> -->
+                  
 
                   <!-- <a class="small  text-white" href="#!">Forgot password?</a> -->
                 </form>
