--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,9 @@
-<section class="vh-100" style="background-color: #eee;">
+<div class="container">
+<section class="vh-100" style="background-color: #eee; width: 100%;">
     <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100" style="background-color: white;">
         <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 25px;">
+          <div class="container text-black border-0" >
             <div class="card-body p-md-5">
               <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
@@ -58,7 +59,7 @@
   
                     
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="submit"  (click)="(create())" class="btn btn-primary btn-lg">Registrarse</button>
+                      <button type="button" (click)="(create())" class="btn btn-primary" style="background-color:blue;">Registrarse</button>
                     </div>
   
                   </form>
@@ -71,3 +72,4 @@
       </div>
     </div>
   </section>
+</div>
