--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -1,33 +1,46 @@
-<!-- <app-header></app-header> -->
 
-						
 
+				
 <div class="card">
 
 	
-	
-	<div class="mt-2 mb-4 col-4">
-		<form class="d-flex align-items-center">
-			<input class="form-control mr-2" name="filter" type="search" [(ngModel)]="filter" placeholder="Buscar..." >
-			<i class="fas fa-search" ></i>
-			<!-- <button style="background-color: #3f458a;" class="btn text-white btn" type="button">Buscar</button> -->
-		</form>
-	</div>
+	<div class="container-fluid mt-5">
+		<div class="row">
+			<div class="col-2">
+				<form class="form-inline">
+					<input class="form-control " name="filter" type="search" [(ngModel)]="filter" placeholder="Buscar..." >
+					<i class="fas fa-search" ></i>
+					
+					<!-- <button style="background-color: #3f458a;" class="btn text-white btn" type="button">Buscar</button> -->
+				</form>
+			  
+			</div>
 
-	
-	<label  class="form-label ml-4" for="">Filtrar por Estados del caso</label>
-	<div  class="input-group mb-3 ml-4" >
-		
-		<select (change)="getinfo(filtro.estado_caso)" [(ngModel)]="filtro.estado_caso" class="form-select col-lg-2" aria-label="Default select example">
-			<option value ="Solucionado">Solucionado</option>
-		  	<option value="Pendiente">Pendiente</option>
-		</select>
-		<span class="input-group-text border-0" id="search-addon" (click)="getinfo(undefined)">
-			<i class="fa fa-window-close"></i>
-		</span>
+			
+
+			<div class="col-5">
+				<form class="form-innline">
+
+					<label class="form-label ml-4" for="">Filtrar por Estados del caso</label>
+				<select (change)="getinfo(filtro.estado_caso)" [(ngModel)]="filtro.estado_caso" class="form-select" aria-label="Default select example">
+					<option value ="Solucionado">Solucionado</option>
+					  <option value="Pendiente">Pendiente</option>
+				</select>
+				<span class="input-group-text border-0" id="search-addon" (click)="getinfo(undefined)">
+					<i class="fa fa-window-close"></i>
+				</span>
+
+
+				</form>
+				
+				
+			  
+			</div>
+		</div>
+			
 		
 	</div>
-
+	
 
 	<div *ngIf="cliente ==1" class="card-header text-center ">
 		CONTROL DE CASOS FINKY
