--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-<section class="vh-100" style="background-color: #3f458a;">
+<section class="vh-100" style="background-color: #40CFFF">
   <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100" style="background-color: #3f458a;">
+    <div class="row d-flex justify-content-center align-items-center h-100" style="background-color: #40CFFF;">
       <div class="col col-xl-10">
-        <div style="background-color: #3f458a;">
+        <div style="background-color: #40CFFF">
           <div class="row g-0">
 
             <div class=" col-md-6 row col-lg-6 align-items-center justify-content-center">
-              <div class="align-items-center">
-                <img class="center-block" src="../../assets/logo.png" />
+              <div class="container" >
+                <img class="" src="../../assets/logo.png" style="height: auto; width: 500px;" />
               </div>
             </div>
             <div class="col-md-6 col-lg-6 d-flex align-items-center ">
